--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "dependencies": {
     "axios": "^0.19.0"
   },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "sinon": "^7.3.2"
+  },
   "homepage": "https://github.com/sammygriffiths/frinkiac-gif-api",
   "keywords": [
     "simpsons",
