--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frinkiac-gif-generator",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Generate Simpsons gifs based on a search term from frinkiac.com",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,8 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "word-wrap": "^1.2.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
