--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "string-similarity": "^3.0.0",
     "word-wrap": "^1.2.3"
   },
   "devDependencies": {
