--- a/.github/workflows/tag-and-deploy.yml
+++ b/.github/workflows/tag-and-deploy.yml
@@ -39,19 +39,9 @@ jobs:
     name: Apply Tag
     if: ${{ needs.get_tag.outputs.tag_exists == 'false' }}
     runs-on: ubuntu-latest
-    needs: get_tag
+    needs: [get_tag, test]
     steps:
     - uses: actions/checkout@v2
-    - name: Update npm version
-      run: npm version ${{ needs.get_tag.outputs.tag }} --git-tag-version=false
-    - name: Commit changes
-      uses: EndBug/add-and-commit@v5
-      with:
-        author_name: github-actions
-        message: "Bump version to ${{ needs.get_tag.outputs.tag }}"
-        add: "package.json package-lock.json"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Create Release
       uses: actions/create-release@v1
       env:
@@ -62,7 +52,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [get_tag, test]
+    needs: tag
     steps:
     - uses: actions/checkout@v2
     - name: Setup Node
