--- a/.github/workflows/bump-npm-version.yml
+++ b/.github/workflows/bump-npm-version.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   bump:
     name: Bump version
-    if: contains( github.ref, 'release' )
+    if: !contains( github.ref, 'release' )
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
