--- a/.github/workflows/bump-npm-version.yml
+++ b/.github/workflows/bump-npm-version.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Get version
       id: get_version
-      run: echo "##[set-output name=version;]$(echo ${{ env.GITHUB_HEAD_REF }} | sed -e "s/^release\///")"
+      run: echo "##[set-output name=version;]$(echo $GITHUB_HEAD_REF | sed -e "s/^release\///")"
     - name: Update npm version
       run: npm version ${{ steps.get_version.outputs.version }} --git-tag-version=false --allow-same-version
     - name: Commit changes
