--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "urls": {
         "frinkiac": "frinkiac.com",
-        "morbotron": "morbotron.com"
+        "morbotron": "morbotron.com",
+        "moas": "masterofallscience.com"
     }
 }
